Separated essentials in js

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
     <header class="header u-vpadding">
         <div class="row">
             <div class="grid">
-                
+
                 <div class="grid__6">
                     <h1 class="heading-primary heading-primary--main">Laboratorul tau de <span>cariera</span></h1>
                     <div class="header__buttons">
@@ -145,12 +145,16 @@
             <div class="grid">
                 <div class="grid__6">
                     <div class="yt-video yt-video--tertiary">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZHmvvcHCyN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZHmvvcHCyN8" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="grid__6 video-section__text">
                     <h3 class="heading-secondary heading-secondary--tertiary">Cariera ta in IT</h3>
-                    <p class="paragraph paragraph--grey">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe iure illum unde perspiciatis ex provident cum consequatur dolore aspernatur. Est velit nisi eveniet explicabo tenetur numquam harum laborum voluptatibus optio.</p>
+                    <p class="paragraph paragraph--grey">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe
+                        iure illum unde perspiciatis ex provident cum consequatur dolore aspernatur. Est velit nisi
+                        eveniet explicabo tenetur numquam harum laborum voluptatibus optio.</p>
                 </div>
             </div>
         </div>
@@ -160,15 +164,42 @@
         <div class="row row--respond">
             <h2 class="heading-secondary heading-secondary--secondary u-text-center">Beneficii</h2>
             <div class="grid grid--borders grid--borders--3 u-text-center">
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
+                <div class="grid__4 features-section__outline">
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo
+                        ratione, quod expedita voluptate reiciendis doloribus repellendus</p>
+                </div>
             </div>
         </div>
     </section>
@@ -183,7 +214,8 @@
                 </div>
                 <div class="grid__8 partners-section__container">
                     <p class="paragraph paragraph--large paragraph--grey partners-section__text">
-                        Suntem parteneri Microsoft si Oracle pentru a oferi training de inalta calitate dar si pentru a oferi acces la resurse.
+                        Suntem parteneri Microsoft si Oracle pentru a oferi training de inalta calitate dar si pentru a
+                        oferi acces la resurse.
                     </p>
                 </div>
             </div>
@@ -197,7 +229,8 @@
                 <div class="grid__6 u-text-center team-section__text">
                     <h2 class="heading-secondary heading-secondary--primary">Echipa IT-Labs te asteapta!</h2>
                     <p class="paragraph paragraph--large paragraph--grey">
-                        Suntem o echipa tanara si dinamica. Trainerii nostrii sunt calificati CompTIA si fiecare trainer are peste 7 - 8 ani de experienta in domeniul sau de expertiza.
+                        Suntem o echipa tanara si dinamica. Trainerii nostrii sunt calificati CompTIA si fiecare trainer
+                        are peste 7 - 8 ani de experienta in domeniul sau de expertiza.
                     </p>
                 </div>
                 <div class="grid__6 team-section__img">
@@ -345,7 +378,8 @@
             <div class="grid">
                 <div class="grid__3 footer__filler"></div>
                 <div class="grid__9 footer__legal">
-                    Copyright IT Labs &copy; 2020 | Toate drepturile rezervate | <a href="gdpr.html" class="footer__link">Politica de confidentialitate</a> | 
+                    Copyright IT Labs &copy; 2020 | Toate drepturile rezervate | <a href="gdpr.html"
+                        class="footer__link">Politica de confidentialitate</a> |
                     <a href="cookie-policy.html" class="footer__link">Politica de utilizare a cookie-urilor</a>
                 </div>
             </div>
