Created header section for blog

--- a/src/gdpr.html
+++ b/src/gdpr.html
@@ -122,13 +122,13 @@
 
     </nav>
 
-    <section class="u-vpadding color-section--grey-light">
+    <section class="u-vpadding--small color-section--grey-light">
         <div class="row">
             <h2 class="heading-secondary heading-secondary--grey-dark">Informare privind prelucrarea datelor cu caracter personal pe website</h2>
         </div>
     </section>
 
-    <section class="u-vpadding cookie-info">
+    <section class="u-vpadding--small cookie-info">
         <div class="row">
             <p class="paragraph">
                 Informatiile prezentate in continuare au scopul de a aduce la cunostinta utilizatorului mai multe detalii despre plasarea, utilizarea si administrarea „cookie”-urilor utilizate de site-ul ul  www.it-labs.ro .
