Created blog layout, design for switch button

--- a/src/blog.html
+++ b/src/blog.html
@@ -134,6 +134,28 @@
         </div>
     </header>
 
+    <main class="u-vpadding--small layout-blog">
+        <div class="row layout-blog__container">
+            <div class="layout-blog__area--posts">
+                <div class="layout-blog__tab">
+                    <div class="layout-blog__heading">Postari</div>
+
+                    <div class="switch switch--blog">
+                        <div class="switch__background"></div>
+                        <div class="switch__text switch__text--left">Pentru tine</div>
+                        <div class="switch__text switch__text--right">Recente</div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="layout-blog__area--visited">
+                <div class="layout-blog__tab">
+                    <div class="layout-blog__heading">Vazute</div>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer class="footer">
         <div class="row">
 
