Added toggle function to switch

--- a/src/blog.html
+++ b/src/blog.html
@@ -142,8 +142,8 @@
 
                     <div class="switch switch--blog">
                         <div class="switch__background"></div>
-                        <div class="switch__text switch__text--left">Pentru tine</div>
-                        <div class="switch__text switch__text--right">Recente</div>
+                        <div class="switch__text switch__text--left" data-type="left">Pentru tine</div>
+                        <div class="switch__text switch__text--right" data-type="right">Recente</div>
                     </div>
 
                 </div>
